--- a/src/app/dashboard/views/features-board/features-board.component.scss
+++ b/src/app/dashboard/views/features-board/features-board.component.scss
@@ -30,6 +30,14 @@
                     font-weight: 600;
                 }
             }
+            .commits-description {
+                max-height: 100px;
+                overflow-y: auto;
+                background-color: #ffffff63;
+                p {
+                    font-size: 0.6rem;
+                }
+            }
             .console-commits-embed {
                 width: 100px;
                 height: 100px;
