--- a/src/app/dashboard/views/releases-board/releases-board.component.html
+++ b/src/app/dashboard/views/releases-board/releases-board.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex">
+<div class="d-flex h-100">
     <div id="release-bar">
         <div class="d-flex flex-column h-100">
             <div class="release-bar-header text-center p-2 mt-4">
